--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 					font-size: 300%;
 					text-align:center;
 				}
+				h2 {
+					color: LightCoral;
+					font-family: tahoma;
+					font-size: 200%;
+					text-align:center;
+				}
 				h3 {
 					color: IndianRed;
 					font-family: veranda;
@@ -55,6 +61,19 @@
  				<a href="products.html">Products</a>
 				<a href="policies.html">Policies</a>
 				<a href="contact_us.html">Contact Us</a>
+			</div>
+			<div style="padding-left:16px">
+  				<h1>Sunwater</h1>
+  				<h2><i>Make Every Sip Count</i></h2>
+				<img src="sunset.jpeg"
+					width="425"
+					height="400" />
+				<img src="seagull.jpeg"
+					width="425"
+					height="400" />
+				<img src="water.jpeg"
+					width="425"
+					height="400" />
 			</div>
 
 			<div style="padding-left:16px">
