--- a/sunwater.html
+++ b/sunwater.html
@@ -5,7 +5,7 @@
 			<title>Sunwater</title>
 			<link href ="main.css" rel="stylesheet" />
 			<style>
-				body {backgroun-color: LightGoldenRodYellow;}
+				body {background-color: LightGoldenRodYellow;}
 				h1 {
 					color: DarkOrange;
 					font-family: tahoma;
